# tree-sitter-muttrc

./: Cargo.toml  grammar.js  package.json
backlog/tasks/: task-1 - update-grammar-with-tree-sitter-update.md
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c
test/corpus/: bindings.txt  variables.txt
