[package]
name = "tree-sitter-muttrc"
description = "Muttrc grammar for tree-sitter"
version = "0.0.6"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "muttrc"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-muttrc"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26"
